<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <TextView
        android:id="@+id/textSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/settings_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSettingsAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/settings_button_add" />

            <Button
                android:id="@+id/buttonSettingsRemove"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/settings_button_remove" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSettingsUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonSettingsAdd"
                android:text="@string/settings_button_update" />

            <Button
                android:id="@+id/buttonSettingsBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonSettingsRemove"
                android:text="@string/settings_button_back" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>